# KVCacheBoundaryProtection

./: .gitignore  CITATION.bib  DATA_MANIFEST.md  LICENSE  README.md  pyproject.toml  requirements-figures.txt  requirements-release.txt
configs/: matrix.yaml  policies.yaml
data/: jit-probe-bench.jsonl  longbench-balanced.jsonl  longbench-longctx.jsonl  longbench-summarization.jsonl  niah-benchmark.jsonl
paper/: jax_decode_latency_table.tex
results/32k/: q7b-32k-c32768-lru-noprot.jsonl  q7b-32k-c4096-lru-noprot.jsonl  q7b-32k-c4096-lru-prot.jsonl
results/32k-q3b-final/: q3b-32k-c32768-lru-noprot.jsonl  q3b-32k-c4096-lru-noprot.jsonl  q3b-32k-c4096-lru-prot.jsonl
results/ablation/: q25-c256-lru.jsonl
results/confound/: q25-c2048-fullcache.jsonl
results/confound-fix/: q25-c128-lru-protected.jsonl  q25-c256-lru-protected.jsonl  q25-c512-lru-protected.jsonl
results/credit-v2/: q25-c128-oc.jsonl  q25-c256-oc.jsonl  q25-c512-oc.jsonl
results/jit-latency-probe/: probe-adakv_faithful.jsonl  probe-lru.jsonl  probe-quest_faithful.jsonl
results/longctx/: q3b-longctx-c1024-noprot.jsonl  q3b-longctx-c1024-prot.jsonl  q3b-longctx-fullcache.jsonl
results/niah/: phi35-niah-c256-h2o-noprot.jsonl  phi35-niah-c256-h2o-prot.jsonl  phi35-niah-fullcache.jsonl  (+4 more)
scripts/: aggregate_jax_decode_latency.py  aggregate_n481.py  attention_mass_analysis_v2.py  compute_rougel.py  generate_figures.py  generate_niah_64k.py  generate_niah_dataset.py  plot_32k_protection.py  plot_64k_position.py  plot_context_scaling.py  plot_f1_histogram.py  plot_perdomain_longctx.py  run_v3_jax.py
(+113 files in other folders)
