[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterfact-kv-eviction"
version = "0.1.0"
description = "Code and data for Protection Is (Nearly) All You Need: Structural Protection Dominates Scoring in Globally Capped KV Eviction (arXiv:2605.18053)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.0",
  "flax>=0.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
